<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="section_title">My Nanodegree Apps!</string>
    <string name="spotify_app">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="built_app">Built it Bigger</string>
    <string name="bacon_reader_app">Bacon Reader App</string>
    <string name="capstone_app">Capstone App</string>
</resources>
